--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.4.0"
+    "api/*.php": {
+      "runtime": "vercel-php@0.7.1"
     }
-  },
-  "rewrites": [
-    { "source": "/favicon.ico", "destination": "https://juicy.vercel.app/favicon.ico" },
-    { "source": "/(.*)", "destination": "/api/index.php" }
-  ]
+  }
 }
